HelpingHandsProject/force-app/main/default/objects/Donation__c/fields/Donor_Name__c.field-meta.xml
<CustomField>
    <fullName>Donor_Name__c</fullName>
    <description>Enter the Donor Name</description>
    <label>Donor Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>