HelpingHandsProject/force-app/main/default/objects/Donation__c/fields/Linked_Event__c.field-meta.xml
<CustomField>
    <fullName>Linked_Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>To which event the donation is linked with.</description>
    <label>Linked Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Donations</relationshipLabel>
    <relationshipName>Donations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>