HelpingHandsProject/force-app/main/default/objects/Donation__c/fields/Linked_Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Linked_Volunteer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Volunteer Name/ID collected the donation</description>
    <label>Linked Volunteer</label>
    <referenceTo>Volunteer__c</referenceTo>
    <relationshipLabel>Donations</relationshipLabel>
    <relationshipName>Donations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>